--- a/index.html
+++ b/index.html
@@ -19,17 +19,23 @@
     <div class="subtitle">L’information libre d’Éorzéa</div>
   </header>
 
-<section id="filters" class="filters">
-  <button class="filter-btn active" data-filter="All">Tous</button>
-  <button class="filter-btn" data-filter="Guide">Guides</button>
-  <button class="filter-btn" data-filter="Astuces">Astuces</button>
-  <button class="filter-btn" data-filter="Chronique">Chroniques</button>
-  <button class="filter-btn" data-filter="Make a Gils">Make a Gils 💸</button>
-</section>
+<main>
 
-  <main id="articles-container">
-     <!-- Articles chargés dynamiquement ici -->
-  </main>
+  <!-- Filtres par catégories -->
+  <section id="filters" class="filters">
+    <button class="filter-btn active" data-filter="All">Tous</button>
+    <button class="filter-btn" data-filter="Guide">Guides</button>
+    <button class="filter-btn" data-filter="Astuces">Astuces</button>
+    <button class="filter-btn" data-filter="Chronique">Chroniques</button>
+    <button class="filter-btn" data-filter="Make a Gils">Make a Gils 💸</button>
+  </section>
+
+  <!-- Conteneur des articles dynamiques -->
+  <section id="articles-container">
+    <!-- Articles chargés dynamiquement ici -->
+  </section>
+
+</main>
 
 
   <footer>
