--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
 
   <!-- Filtres par catégories -->
   <section id="filters" class="filters">
-    <button class="filter-btn active" data-filter="All">Tous</button>
-    <button class="filter-btn" data-filter="Guide">Guides</button>
-    <button class="filter-btn" data-filter="Astuces">Astuces</button>
-    <button class="filter-btn" data-filter="Chronique">Chroniques</button>
-    <button class="filter-btn" data-filter="Make a Gils">Make a Gils 💸</button>
+    <!-- Boutons générés dynamiquement ici -->
   </section>
 
   <!-- Conteneur des articles dynamiques -->
