--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
   <meta charset="UTF-8">
   <title>SephyLeaks – L’information libre d’Éorzéa</title>
   <link rel="stylesheet" href="css/style.css">
-  <script>
-    const timestamp = Date.now();
-    const script = document.createElement('script');
-    script.src = `js/main.js?v=${timestamp}`;
-    script.defer = true;
-    document.head.appendChild(script);
-  </script>
+  <script src="js/main.js"></script>
 </head>
 <body>
 
