--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-
   <header>
     <h1>SephyLeaks</h1>
     <div class="subtitle">L’information libre d’Éorzéa</div>
   </header>
+<nav class="main-nav">
+  <div class="logo">SephyLeaks</div>
+  <ul class="nav-links">
+    <li><a href="#">Accueil</a></li>
+    <li><a href="#">Guides</a></li>
+    <li><a href="#">Chroniques</a></li>
+    <li><a href="#">Make a Gils 💸</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
 
   <main>
     <section id="filters" class="filters">
