--- a/index.html
+++ b/index.html
@@ -5,22 +5,10 @@
   <title>SephyLeaks – L’information libre d’Éorzéa</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js"></script>
+  <script src="js/include.js" defer></script>
 </head>
 <body>
-  <header>
-    <h1>SephyLeaks</h1>
-    <div class="subtitle">L’information libre d’Éorzéa</div>
-  </header>
-<nav class="main-nav">
-  <div class="logo">SephyLeaks</div>
-  <ul class="nav-links">
-    <li><a href="#">Accueil</a></li>
-    <li><a href="#">Guides</a></li>
-    <li><a href="#">Chroniques</a></li>
-    <li><a href="#">Make a Gils 💸</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
+<div data-include="components/header.html"></div>
 
   <main>
     <section id="filters" class="filters">
