--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     </section>
   </main>
 
-  <footer>
-    SephyLeaks – Projet communautaire non officiel. Soutenez-nous sur Ko-fi ✧
-  </footer>
-
+<div data-include="components/footer.html"></div>
 </body>
 </html>
