--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
   <script src="js/include.js" defer></script>
 </head>
 <body>
-<div data-include="components/header.html"></div>
+<header>
+  <h1>SephyLeaks</h1>
+  <div class="subtitle">L’information libre d’Éorzéa</div>
+</header>
+
+<nav class="main-nav">
+  <a href="index.html" class="logo">SephyLeaks</a>
+  <ul class="nav-links">
+    <li><a href="#">Accueil</a></li>
+    <li><a href="#">Guides</a></li>
+    <li><a href="#">Chroniques</a></li>
+    <li><a href="#">Make a Gils 💸</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
+
 
   <main>
     <section id="filters" class="filters">
