--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>SephyLeaks – L’information libre d’Éorzéa</title>
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/main.js"></script>
   <script src="js/include.js" defer></script>
 </head>
 <body>
@@ -36,5 +35,6 @@
   </main>
 
 <div data-include="components/footer.html"></div>
+<script src="js/main.js" defer></script>
 </body>
 </html>
