--- a/article.html
+++ b/article.html
@@ -29,7 +29,7 @@
       <p>Chargement de l’article...</p>
     </div>
   </main>
-
+<script src="js/load-html-article.js" defer></script>
   <div data-include="components/footer.html"></div>
 
 </body>
