--- a/article.html
+++ b/article.html
@@ -2,34 +2,45 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>SephyLeaks – L’information libre d’Éorzéa</title>
+  <title>SephyLeaks – Article</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/article.css">
   <script src="js/include.js" defer></script>
   <script src="js/article.js" defer></script>
 </head>
 <body>
+
+ <!-- HEADER + NAV -->
 <header>
   <h1>SephyLeaks</h1>
   <div class="subtitle">L’information libre d’Éorzéa</div>
 </header>
+    <nav class="main-nav">
+      <a href="index.html" class="logo">SephyLeaks</a>
+      <ul class="nav-links">
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Guides</a></li>
+        <li><a href="#">Chroniques</a></li>
+        <li><a href="#">Make a Gils 💸</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<nav class="main-nav">
-  <a href="index.html" class="logo">SephyLeaks</a>
-  <ul class="nav-links">
-    <li><a href="#">Accueil</a></li>
-    <li><a href="#">Guides</a></li>
-    <li><a href="#">Chroniques</a></li>
-    <li><a href="#">Make a Gils 💸</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
-
+  <!-- CONTENU DE L'ARTICLE -->
   <main class="article-page">
     <div id="article-container">
-      <p>Chargement de l’article...</p>
+      <div class="cover-image" id="cover-image"></div>
+      <div class="meta">
+        <span class="tag-badge" id="tag"></span>
+        <span class="date" id="date"></span>
+      </div>
+      <h1 id="title"></h1>
+      <article id="article-content">Chargement...</article>
     </div>
   </main>
-<script src="js/load-html-article.js" defer></script>
+
+  <!-- FOOTER -->
   <div data-include="components/footer.html"></div>
 
 </body>
