--- a/article.html
+++ b/article.html
@@ -5,6 +5,7 @@
   <title>SephyLeaks – Article</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/article.css">
+  <script src="https://lds-img.finalfantasyxiv.com/pc/global/js/eorzeadb/loader.js?v3"></script>
   <script src="js/include.js" defer></script>
   <script src="js/article.js" defer></script>
 </head>
@@ -67,8 +68,43 @@
   </aside>
 </div>
 
+<!-- 🗨️ SECTION COMMENTAIRES (placeholder) -->
+<div class="comment-section">
+<section id="comments" class="comments-section">
+  <h2>Commentaires</h2>
+
+  <!-- Liste de commentaires fictifs -->
+  <div class="comment">
+    <img src="assets/avatar1.png" alt="avatar joueur" class="comment-avatar">
+    <div class="comment-body">
+      <div class="comment-meta">
+        <span class="comment-author">Aelyna</span>
+        <span class="comment-date">15 avril 2025</span>
+      </div>
+      <p>Super guide, merci ! J'avais oublié les journaux de chasse… 🤦‍♀️</p>
+    </div>
+  </div>
 
 
+  <div class="comment">
+    <img src="assets/avatar2.png" alt="avatar joueur" class="comment-avatar">
+    <div class="comment-body">
+      <div class="comment-meta">
+        <span class="comment-author">Yugiri-sama</span>
+        <span class="comment-date">16 avril 2025</span>
+      </div>
+      <p>Est-ce que ça marche aussi en job magique ? 👀</p>
+    </div>
+  </div>
+
+  <!-- Formulaire désactivé -->
+  <div class="comment-form disabled">
+    <p class="login-warning">Vous devez être connecté pour commenter.</p>
+    <textarea placeholder="Connexion requise pour écrire un commentaire..." disabled></textarea>
+    <button disabled>Envoyer</button>
+  </div>
+ </div>
+</section>
   <!-- FOOTER -->
   <div data-include="components/footer.html"></div>
 
