--- a/admin.html
+++ b/admin.html
@@ -25,6 +25,17 @@
 
       <label for="content">Contenu HTML</label>
       <textarea id="content"></textarea>
+      <details class="icon-bank">
+       <summary>📁 Banque d’icônes</summary>
+       <div class="icon-list">
+         <!-- ⬇️ ICI tu colles les icônes disponibles -->
+         <img src="assets/icotheque/Sephy-reporter-1.webp"
+              alt="Sephy Reporter"
+              title="Sephy Reporter"
+              class="icon-thumb"
+              data-insert="<img src='assets/icons/Sephy-reporter-1.webp' alt='Sephy Reporter'>">
+        </div>
+      </details>
 
       <!-- 🔘 Bouton Lodestone -->
       <button id="insert-ffxiv-link" style="margin-top: 0.5rem;">➕ Insérer un lien FFXIV</button>
@@ -32,7 +43,7 @@
       <button id="clear-preview" style="margin-top: 0.5rem;">⚠️ Effacer l’aperçu</button>
 
       <button id="export-json" style="margin-top: 0.5rem;">📤 Exporter JSON</button>
-
+      <button id="publish-article" class="admin-btn">📌 Publier l’article</button>
     </div>
 
     <div class="preview">
