--- a/article.html
+++ b/article.html
@@ -54,7 +54,7 @@
 
     <!-- 🎥 Vidéo intégrée -->
     <section class="video-box">
-      <iframe width="100%" src="https://www.youtube.com/embed/2gHg9THD-ls" title="Vidéo FFXIV" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" src="https://www.youtube.com/embed/" title="Vidéo FFXIV" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <!-- 📰 Articles récents -->
@@ -75,7 +75,7 @@
 
   <!-- Liste de commentaires fictifs -->
   <div class="comment">
-    <img src="assets/avatar1.png" alt="avatar joueur" class="comment-avatar">
+    <img src="assets/test.webp" alt="avatar joueur" class="comment-avatar">
     <div class="comment-body">
       <div class="comment-meta">
         <span class="comment-author">Aelyna</span>
@@ -87,7 +87,7 @@
 
 
   <div class="comment">
-    <img src="assets/avatar2.png" alt="avatar joueur" class="comment-avatar">
+    <img src="assets/test.webp" alt="avatar joueur" class="comment-avatar">
     <div class="comment-body">
       <div class="comment-meta">
         <span class="comment-author">Yugiri-sama</span>
