--- a/admin.html
+++ b/admin.html
@@ -95,7 +95,7 @@
 
     <div class="preview">
       <h2>Aperçu</h2>
-      <div id="preview-content">
+      <div id="preview-content" class="preview-content">
         <h1>Titre de l'article</h1>
         <div>
           <span class="tag-badge">TAG</span>
