--- a/article.html
+++ b/article.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=EB+Garamond&family=Cormorant+Garamond&display=swap" rel="stylesheet">
   <title>SephyLeaks – Article</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/article.css">
