--- a/editor.html
+++ b/editor.html
@@ -134,6 +134,7 @@
   <div class="image-url-group">
     <label for="image">URL bannière :</label>
     <input type="text" id="image" placeholder="https://...">
+	<div id="banner-preview" class="img-preview"></div>
   </div>
       </div>
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
