--- a/editor.html
+++ b/editor.html
@@ -136,7 +136,10 @@
     <input type="text" id="image" placeholder="https://...">
 	<div id="banner-preview" class="img-preview"></div>
   </div>
-      </div>
+     </div>
+	 <div class="editor-bar">
+	  <input type="text" id="resume" placeholder="Résumé de l’article">
+</div>
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
 </main>
 
