--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <li><a href="#">Contact</a></li>
   </ul>
 </nav>
+<section class="hero-section">
+  <div class="hero-inner">
+    <h2>L’information libre d’Éorzéa</h2>
+    <p>Guides, chroniques et découvertes par des joueurs passionnés.</p>
+    <a href="#articles" class="hero-cta">⬇️ Voir les articles</a>
+  </div>
+</section>
 
 
   <main>
