--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
 
   <main>
-    <section id="filters" class="filters">
-      <!-- Boutons générés dynamiquement ici -->
-    </section>
+	<section id="filters" class="filter-bar">
+	  <!-- Les boutons seront générés dynamiquement -->
+	</section>
+
 
     <section id="articles-container">
       <!-- Articles chargés dynamiquement ici -->
