--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
   <main>
-	<section id="filters" class="filter-bar">
+	<section id="filters"">
 	  <!-- Les boutons seront générés dynamiquement -->
 	</section>
 
