--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
   </div>
 </section>
 
-
   <main>
 	<section id="filters"">
 	  <!-- Les boutons seront générés dynamiquement -->
 	</section>
-
+	
+	<section id="featured-article"></section>
 
     <section id="articles-container">
       <!-- Articles chargés dynamiquement ici -->
