--- a/index.html
+++ b/index.html
@@ -44,13 +44,33 @@
 	  <!-- Les boutons seront générés dynamiquement -->
 	</section>
 	
-	<section id="featured-article"></section>
+	<section class="featured-section">
+	  <h2 class="featured-title">À la une</h2>
+	  <div id="featured-article"></div>
+	</section>
 
     <section id="articles-container">
       <!-- Articles chargés dynamiquement ici -->
     </section>
   </main>
-
+  
+<aside class="sidebar-right">
+  <div class="contribute-box">
+    <h3>💸 Make a Gil$</h3>
+    <img src="assets/icotheque/sephy-reporter-1.webp" alt="Sephy Reporter" class="contribute-img">
+    <p>Ton aide serait précieuse pour rédiger de nouveaux articles sur Final Fantasy XIV !</p>
+    <a href="#" class="btn-contribuer">Contribuer</a>
+  </div>
+    <div class="guides-box">
+    <h3>📚 Guides</h3>
+    <div class="tag-list">
+      <span class="guide-tag">Jobs</span>
+      <span class="guide-tag">Craft</span>
+      <span class="guide-tag">Glamour</span>
+      <span class="guide-tag">Raid</span>
+    </div>
+  </div>
+</aside>
 <div data-include="components/footer.html"></div>
 <script src="js/main.js" defer></script>
 </body>
