--- a/article.html
+++ b/article.html
@@ -22,20 +22,26 @@
 </head>
 
  <!-- HEADER + NAV -->
-<header>
-  <h1>SephyLeaks</h1>
-  <div class="subtitle">L’information libre d’Éorzéa</div>
+<header class="main-header">
+  <div class="header-inner">
+    <img src="assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
+    <div class="site-title-group">
+      <h1>SephyLeaks</h1>
+      <div class="subtitle">L’information libre d’Éorzéa</div>
+    </div>
+  </div>
 </header>
-    <nav class="main-nav">
-      <a href="index.html" class="logo">SephyLeaks</a>
-      <ul class="nav-links">
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">Guides</a></li>
-        <li><a href="#">Chroniques</a></li>
-        <li><a href="#">Make a Gils 💸</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+
+<nav class="main-nav">
+  <a href="index.html" class="logo">SephyLeaks</a>
+  <ul class="nav-links">
+    <li><a href="#">Accueil</a></li>
+    <li><a href="#">Guides</a></li>
+    <li><a href="#">Ressources</a></li>
+    <li><a href="#">Connexion</a></li>
+    <li><a href="#">❓ À propos</a></li>
+  </ul>
+</nav>
   </header>
 
  <!-- CONTENU PRINCIPAL + SIDEBAR -->
