--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
     <section id="articles-container">
       <!-- Articles chargés dynamiquement ici -->
     </section>
+<section class="latest-articles">
+  <h2>Derniers articles</h2>
+  <ul id="latest-list"></ul>
+</section>
+
   </main>
   
 <aside class="sidebar-right">
