--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="hero-inner">
     <h2>L’information libre d’Éorzéa</h2>
     <p>Guides, chroniques et découvertes par des joueurs passionnés.</p>
-    <a href="#articles" class="hero-cta">⬇️ Voir les articles</a>
+    <a href="#articles-container" class="hero-cta">⬇️ Voir les articles</a>
   </div>
 </section>
 
@@ -60,8 +60,6 @@
     <section id="articles-container">
       <!-- Articles chargés dynamiquement ici -->
     </section>
-
-
   </main>
   
 <aside class="sidebar-right">
