--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
     <section id="articles-container">
       <!-- Articles chargés dynamiquement ici -->
     </section>
+	<div class="view-all-wrapper">
+		<a href="articles.html" class="view-all-btn">Voir tous les articles →</a>
+	</div>
+
   </main>
   
 <aside class="sidebar-right">
