--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- Articles chargés dynamiquement ici -->
     </section>
 	<div class="view-all-wrapper">
-		<a href="articles.html" class="view-all-btn">Voir tous les articles →</a>
+		<a href="listing.html" class="view-all-btn">Voir tous les articles →</a>
 	</div>
 
   </main>
