--- a/listing.html
+++ b/listing.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>SephyLeaks – L’information libre d’Éorzéa</title>
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/include.js" defer></script>
+  <script src="js/listing.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
