--- a/listing.html
+++ b/listing.html
@@ -5,6 +5,7 @@
   <title>SephyLeaks – L’information libre d’Éorzéa</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/listing.js" defer></script>
+  <script src="js/include.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
@@ -42,7 +43,8 @@
       <input type="text" id="search-input" placeholder="🔍 Rechercher un article...">
     </section>
 
-    <section id="articles-container">
+	<section id="listing-container"></section>
+
       <!-- Articles injectés ici -->
     </section>
   </main>
