--- a/listing.html
+++ b/listing.html
@@ -47,7 +47,10 @@
 		<!-- Boutons de filtre insérés dynamiquement via JS -->
 	  </div>
 	</div>
-
+	
+	<div id="listing-meta" class="listing-meta">
+	  <span id="article-count">Chargement...</span>
+	</div>
 	<section id="listing-container"></section>
 
       <!-- Articles injectés ici -->
