--- a/listing.html
+++ b/listing.html
@@ -52,9 +52,9 @@
 	  <span id="article-count">Chargement...</span>
 	</div>
 	<section id="listing-container"></section>
-
       <!-- Articles injectés ici -->
     </section>
+	<div id="pagination-controls" class="pagination-controls"></div>
   </main>
 
   <div data-include="components/footer.html"></div>
