--- a/article.html
+++ b/article.html
@@ -50,7 +50,7 @@
   <!-- CONTENU DE L'ARTICLE -->
   <main class="article-page">
     <div id="article-container">
-      <div class="cover-image" id="cover-image"></div>
+      <div class="article-cover" id="cover-image"></div>
       <div class="meta">
         <span class="tag-badge" id="tag"></span>
         <span class="date" id="date"></span>
