--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <nav class="main-nav">
   <a href="index.html" class="logo">SephyLeaks</a>
+  <button id="burger-btn" aria-label="Ouvrir le menu">☰</button>
   <ul class="nav-links">
     <li><a href="#">Accueil</a></li>
     <li><a href="#">Guides</a></li>
