--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/icons/android-chrome-512x512.png">
 </head>
+<body>
 <header class="main-header">
   <div class="header-inner">
     <img src="assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
