--- a/index.html
+++ b/index.html
@@ -20,24 +20,25 @@
 <body>
 <header class="main-header">
   <div class="header-inner">
-    <a href="index.html" class="site-logo-link">
-      <img src="assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
-    </a>
+    <img src="assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
     <div class="site-title-group">
       <h1>SephyLeaks</h1>
       <div class="subtitle">L’information libre d’Éorzéa</div>
     </div>
-<button id="burger-btn" class="burger-btn">☰</button>
   </div>
-
-  <nav id="nav-menu" class="nav-links">
-    <a href="index.html">Accueil</a>
-    <a href="#">Guides</a>
-    <a href="#">Ressources</a>
-    <a href="#">Connexion</a>
-    <a href="#">❓ À propos</a>
-  </nav>
 </header>
+
+<nav class="main-nav">
+  <a href="index.html" class="logo">SephyLeaks</a>
+  <button id="burger-btn" aria-label="Ouvrir le menu">☰</button>
+  <ul class="nav-links">
+    <li><a href="#">Accueil</a></li>
+    <li><a href="#">Guides</a></li>
+    <li><a href="#">Ressources</a></li>
+    <li><a href="#">Connexion</a></li>
+    <li><a href="#">❓ À propos</a></li>
+  </ul>
+</nav>
 <section class="hero-section">
   <div class="hero-inner">
     <h2>L’information libre d’Éorzéa</h2>
