--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <nav class="main-nav">
   <a href="index.html" class="logo">SephyLeaks</a>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  <label for="menu-toggle" class="burger">☰</label>
   <ul class="nav-links">
     <li><a href="#">Accueil</a></li>
     <li><a href="#">Guides</a></li>
