--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <li><a href="#">Accueil</a></li>
     <li><a href="#">Guides</a></li>
     <li><a href="#">Ressources</a></li>
-    <li><a href="#">Connexion</a></li>
-    <li><a href="#">❓ À propos</a></li>
+
+    <li><a href="#">À propos</a></li>
   </ul>
 </nav>
 <section class="hero-section">
