--- a/article.html
+++ b/article.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/article.css">
   <script src="https://lds-img.finalfantasyxiv.com/pc/global/js/eorzeadb/loader.js?v3"></script>
   <script src="js/include.js" defer></script>
+  <script src="js/main.js" defer></script>
   <script src="js/article.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
@@ -39,7 +40,7 @@
     <li><a href="#">Accueil</a></li>
     <li><a href="#">Guides</a></li>
     <li><a href="#">Ressources</a></li>
-    <li><a href="#">Connexion</a></li>
+
     <li><a href="#">❓ À propos</a></li>
   </ul>
 </nav>
