--- a/account/login.html
+++ b/account/login.html
@@ -2,9 +2,20 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connexion – SephyLeaks</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/account/login.css">
+  <link rel="stylesheet" href="sephyleaks/css/style.css">
+  <link rel="stylesheet" href="sephyleaks/css/account/login.css">
+<!-- Favicon de base -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
+
+<!-- Icône Apple / Android -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+  <link rel="manifest" href="assets/icons/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="assets/icons/android-chrome-512x512.png">
 </head>
 <body>
 <div class="login-wrapper">
@@ -20,7 +31,12 @@
 	<p id="login-error" class="error-message"></p>
     <p class="login-info">(Test local sans base de données. Stockage temporaire en localStorage.)</p>
   </form>
+  <p style="text-align:center; margin-top:1rem;">
+  <a href="/SephyLeaks/index.html" style="color:#aaa;">← Revenir à l’accueil</a>
+</p>
+
     <div id="login-message" class="login-feedback"></div>
+
   </div>
 
   <script src="../js/account/login.js"></script>
