--- a/account/account.html
+++ b/account/account.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mon compte – SephyLeaks</title>
-  <link rel="stylesheet" href="sephyleaks/css/style.css">
-  <link rel="stylesheet" href="sephyleaks/css/account/account.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/account/account.css">
   <script src="sephyleaks/js/account/account.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
