--- a/account/login.html
+++ b/account/login.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connexion – SephyLeaks</title>
-  <link rel="stylesheet" href="sephyleaks/css/style.css">
-  <link rel="stylesheet" href="sephyleaks/css/account/login.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/account/login.css">
 <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
