--- a/account/login.html
+++ b/account/login.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connexion – SephyLeaks</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/account/login.css">
+  <link rel="stylesheet" href="/SephyLeaks/css/style.css">
+  <link rel="stylesheet" href="/SephyLeaks/css/account/login.css">
 <!-- Favicon de base -->
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
-  <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="/SephyLeaks/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/SephyLeaks/assets/icons/favicon-16x16.png">
+  <link rel="shortcut icon" href="/SephyLeaks/assets/icons/favicon.ico" type="image/x-icon">
 
 <!-- Icône Apple / Android -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
-  <link rel="manifest" href="assets/icons/site.webmanifest">
-  <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="assets/icons/android-chrome-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/SephyLeaks/assets/icons/apple-touch-icon.png">
+  <link rel="manifest" href="/SephyLeaks/assets/icons/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="192x192" href="/SephyLeaks/assets/icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/SephyLeaks/assets/icons/android-chrome-512x512.png">
 </head>
 <body>
 <div class="login-wrapper">
