--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
 <body>
   <header class="main-header">
     <div class="header-inner">
-      <img src="assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo" />
+      <img src="/SephyLeaks/assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo" />
       <div class="site-title-group">
         <h1>SephyLeaks</h1>
         <div class="subtitle">L’information libre d’Éorzéa</div>
@@ -29,22 +29,21 @@
   </header>
 
   <nav class="main-nav">
-    <a href="index.html" class="logo">SephyLeaks</a>
+    <a href="/SephyLeaks/index.html" class="logo">SephyLeaks</a>
     <ul class="nav-links">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="listing.html">Articles</a></li>
-      <li><a href="login.html">Connexion</a></li>
-      <li><a href="about.html">À propos</a></li>
+      <li><a href="/SephyLeaks/index.html">Accueil</a></li>
+      <li><a href="/SephyLeaks/listing.html">Articles</a></li>
+      <li><a href="/SephyLeaks/about.html">À propos</a></li>
     </ul>
   </nav>
 
   <main class="apropos-container">
     <div class="apropos-inner">
-      <img src="assets/sephy-joconde.webp" alt="Portrait de Sephy" class="apropos-avatar" />
+      <img src="/SephyLeaks/assets/sephy-avatar.webp" alt="Portrait de Sephy" class="apropos-avatar" />
       <div class="apropos-text">
         <h2>À propos de Sephy</h2>
         <p>
-          Créatrice du projet <strong>SephyLeaks</strong>, passionnée par Final Fantasy XIV, par le
+          Créateur du projet <strong>SephyLeaks</strong>, passionné par Final Fantasy XIV, par le
           développement web éthique, et par les mondes communautaires bienveillants. Ce site est né
           d’une volonté de partager des guides clairs, des chroniques sincères, et une touche
           artistique dans un univers parfois trop sérieux.
@@ -55,7 +54,6 @@
         </p>
         <a href="https://ko-fi.com/tonprofil" target="_blank" class="kofi-button">💜 Me soutenir sur Ko-fi</a>
         <div class="apropos-links">
-          <a href="account.html">👤 Voir mon profil</a> |
           <a href="https://tonsitevitrine.com" target="_blank">🌐 Site vitrine</a> |
           <span class="wip">🛠️ Application communautaire à venir</span>
         </div>
@@ -65,5 +63,6 @@
 
   <div data-include="/SephyLeaks/components/footer.html"></div>
   <script src="/SephyLeaks/js/include.js" defer></script>
+  <script src="/SephyLeaks/js/main.js" defer></script>
 </body>
 </html>
