--- a/account/login.html
+++ b/account/login.html
@@ -39,6 +39,6 @@
 
   </div>
 
-  <script src="../js/account/login.js"></script>
+  <script src="/SephyLeaks/js/account/login.js"></script>
 </body>
 </html>
