--- a/article.html
+++ b/article.html
@@ -10,6 +10,7 @@
   <script src="https://lds-img.finalfantasyxiv.com/pc/global/js/eorzeadb/loader.js?v3"></script>
   <script src="js/include.js" defer></script>
   <script src="js/main.js" defer></script>
+  <script src="/SephyLeaks/js/nav.js" defer></script>
   <script src="js/article.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
@@ -37,11 +38,10 @@
 <nav class="main-nav">
   <a href="index.html" class="logo">SephyLeaks</a>
   <ul class="nav-links">
-    <li><a href="#">Accueil</a></li>
-    <li><a href="#">Guides</a></li>
-    <li><a href="#">Ressources</a></li>
-
-    <li><a href="#">❓ À propos</a></li>
+    <li><a href="/SephyLeaks/index.html">Accueil</a></li>
+    <li><a href="/SephyLeaks/listing.html">Articles</a></li>
+	<li><a href="#">Ressources</a></li>
+    <li><a href="/SephyLeaks/about.html">À propos</a></li>
   </ul>
 </nav>
   </header>
