--- a/listing.html
+++ b/listing.html
@@ -34,7 +34,6 @@
     <li><a href="#">Accueil</a></li>
     <li><a href="#">Guides</a></li>
     <li><a href="#">Ressources</a></li>
-    <li><a href="#">Connexion</a></li>
     <li><a href="#">❓ À propos</a></li>
   </ul>
 </nav>
@@ -59,5 +58,6 @@
   </main>
 
   <div data-include="components/footer.html"></div>
+  <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
 </html>
