--- a/account/account.html
+++ b/account/account.html
@@ -24,7 +24,7 @@
 </div>
   <header class="main-header">
     <div class="header-inner">
-      <img src="../assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
+      <img src="/SephyLeaks/assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
       <div class="site-title-group">
         <h1>Mon compte</h1>
         <div class="subtitle">Espace utilisateur</div>
