--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
   <input type="checkbox" id="menu-toggle" class="menu-toggle">
   <label for="menu-toggle" class="burger">☰</label>
   <ul class="nav-links">
-    <li><a href="#">Accueil</a></li>
-    <li><a href="#">Guides</a></li>
-    <li><a href="#">Ressources</a></li>
-
-    <li><a href="#">À propos</a></li>
+    <li><a href="/SephyLeaks/index.html">Accueil</a></li>
+    <li><a href="/SephyLeaks/listing.html">Articles</a></li>
+	<li><a href="#">Ressources</a></li>
+    <li><a href="/SephyLeaks/about.html">À propos</a></li>
   </ul>
 </nav>
 <section class="hero-section">
@@ -90,5 +89,6 @@
 </div>
 <div data-include="components/footer.html"></div>
 <script src="js/main.js" defer></script>
+<script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
 </html>
