--- a/pages/about.html
+++ b/pages/about.html
@@ -63,6 +63,6 @@
 
   <div data-include="/SephyLeaks/components/footer.html"></div>
   <script src="/SephyLeaks/js/include.js" defer></script>
-  <script src="/SephyLeaks/js/main.js" defer></script>
+  <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
 </html>
