--- a/pages/about.html
+++ b/pages/about.html
@@ -31,35 +31,36 @@
   <nav class="main-nav">
     <a href="/SephyLeaks/index.html" class="logo">SephyLeaks</a>
     <ul class="nav-links">
-      <li><a href="/SephyLeaks/index.html">Accueil</a></li>
-      <li><a href="/SephyLeaks/listing.html">Articles</a></li>
-      <li><a href="/SephyLeaks/about.html">À propos</a></li>
+    <li><a href="/SephyLeaks/index.html">Accueil</a></li>
+    <li><a href="/SephyLeaks/listing.html">Articles</a></li>
+	<li><a href="#">Ressources</a></li>
+    <li><a href="/SephyLeaks/pages/about.html">À propos</a></li>
     </ul>
   </nav>
 
-  <main class="apropos-container">
-    <div class="apropos-inner">
+<main class="apropos-container">
+  <div class="apropos-inner">
+    <div class="apropos-avatar-wrapper">
       <img src="/SephyLeaks/assets/sephy-avatar.webp" alt="Portrait de Sephy" class="apropos-avatar" />
-      <div class="apropos-text">
-        <h2>À propos de Sephy</h2>
-        <p>
-          Créateur du projet <strong>SephyLeaks</strong>, passionné par Final Fantasy XIV, par le
-          développement web éthique, et par les mondes communautaires bienveillants. Ce site est né
-          d’une volonté de partager des guides clairs, des chroniques sincères, et une touche
-          artistique dans un univers parfois trop sérieux.
-        </p>
-        <p>
-          Le site est 100% libre, sans pub, et développé artisanalement. Vous pouvez me soutenir
-          sur Ko-fi si vous aimez le projet 💜
-        </p>
-        <a href="https://ko-fi.com/tonprofil" target="_blank" class="kofi-button">💜 Me soutenir sur Ko-fi</a>
-        <div class="apropos-links">
-          <a href="https://tonsitevitrine.com" target="_blank">🌐 Site vitrine</a> |
-          <span class="wip">🛠️ Application communautaire à venir</span>
-        </div>
+    </div>
+    <div class="apropos-text">
+      <h2>À propos de Sephy</h2>
+      <p>
+        Créateur du projet <strong>SephyLeaks</strong>, passionné par Final Fantasy XIV, par le développement web éthique et par les communautés bienveillantes.
+      </p>
+      <p>
+        Ce site a été conçu à la main, avec cœur et café (beaucoup de café). Il est libre, sans pub, et toujours en évolution.
+      </p>
+      <a href="https://ko-fi.com/tonprofil" target="_blank" class="kofi-button">💜 Me soutenir sur Ko-fi</a>
+
+      <div class="apropos-links">
+        <a href="/SephyLeaks/account/account.html">👤 Mon compte</a>
+        <a href="https://tonsitevitrine.com" target="_blank">🌐 Site vitrine</a>
+        <span class="wip">🛠️ Application communautaire à venir</span>
       </div>
     </div>
-  </main>
+  </div>
+</main>
 
   <div data-include="/SephyLeaks/components/footer.html"></div>
   <script src="/SephyLeaks/js/include.js" defer></script>
