--- a/pages/about.html
+++ b/pages/about.html
@@ -51,15 +51,26 @@
       <p>
         Ce site a été conçu à la main, avec cœur et café (beaucoup de café). Il est libre, sans pub, et toujours en évolution.
       </p>
-      <a href="https://ko-fi.com/tonprofil" target="_blank" class="kofi-button">💜 Me soutenir sur Ko-fi</a>
-
+	  </div>
+<div class="apropos-box">
+  <h3>Soutenir SephyLeaks</h3>
+  <p>Ce site est libre, sans pub, mais pas sans café ! ☕<br>Soutiens le projet si tu l’aimes 💜</p>
+  <a href="https://ko-fi.com/tonprofil" target="_blank" class="kofi-button">💜 Me soutenir sur Ko-fi</a>
+</div>
       <div class="apropos-links">
-        <a href="/SephyLeaks/account/account.html">👤 Mon compte</a>
+        <span class="wip">👤 Profil public à venir</span>
         <a href="https://tonsitevitrine.com" target="_blank">🌐 Site vitrine</a>
-        <span class="wip">🛠️ Application communautaire à venir</span>
+		
+<div class="apropos-box">
+  <h3>Vers l’avenir</h3>
+  <p>
+    L’application communautaire SephyLeaks est en cours de développement !<br>
+    Échanges entre joueurs, fiches personnalisées, et bien plus encore...
+  </p>
+  <p class="wip">🛠️ Bientôt disponible !</p>
+</div>
       </div>
     </div>
-  </div>
 </main>
 
   <div data-include="/SephyLeaks/components/footer.html"></div>
