--- a/pages/about.html
+++ b/pages/about.html
@@ -52,15 +52,17 @@
         Ce site a été conçu à la main, avec cœur et café (beaucoup de café). Il est libre, sans pub, et toujours en évolution.
       </p>
 	  </div>
-<div class="apropos-box">
+      <div class="apropos-links">
+        <span class="wip">👤 Profil public à venir</span>
+        <a href="https://tonsitevitrine.com" target="_blank">🌐 Site vitrine</a>
+	</div>
+    </div>
+<div class="apropos-columns">
+	<div class="apropos-box">
   <h3>Soutenir SephyLeaks</h3>
   <p>Ce site est libre, sans pub, mais pas sans café ! ☕<br>Soutiens le projet si tu l’aimes 💜</p>
   <a href="https://ko-fi.com/tonprofil" target="_blank" class="kofi-button">💜 Me soutenir sur Ko-fi</a>
 </div>
-      <div class="apropos-links">
-        <span class="wip">👤 Profil public à venir</span>
-        <a href="https://tonsitevitrine.com" target="_blank">🌐 Site vitrine</a>
-		
 <div class="apropos-box">
   <h3>Vers l’avenir</h3>
   <p>
@@ -69,8 +71,7 @@
   </p>
   <p class="wip">🛠️ Bientôt disponible !</p>
 </div>
-      </div>
-    </div>
+</div>
 </main>
 
   <div data-include="/SephyLeaks/components/footer.html"></div>
