--- a/pages/about.html
+++ b/pages/about.html
@@ -52,11 +52,13 @@
         Ce site a été conçu à la main, avec cœur et café (beaucoup de café). Il est libre, sans pub, et toujours en évolution.
       </p>
 	  </div>
-      <div class="apropos-links">
-        <span class="wip">👤 Profil public à venir</span>
-        <a href="https://tonsitevitrine.com" target="_blank">🌐 Site vitrine</a>
-	</div>
-    </div>
+<div class="apropos-mini-card">
+  <img src="/SephyLeaks/assets/sephy-mini.webp" alt="Mini avatar Sephy" class="mini-avatar" />
+  <div class="mini-card-links">
+    <span class="wip">👤 Profil public à venir</span>
+    <a href="https://tonsitevitrine.com" target="_blank">🌐 Ma vitrine</a>
+  </div>
+</div>
 <div class="apropos-columns">
 	<div class="apropos-box">
   <h3>Soutenir SephyLeaks</h3>
