--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <li><a href="/SephyLeaks/index.html">Accueil</a></li>
     <li><a href="/SephyLeaks/listing.html">Articles</a></li>
 	<li><a href="#">Ressources</a></li>
-    <li><a href="/SephyLeaks/about.html">À propos</a></li>
+    <li><a href="/SephyLeaks/pages/about.html">À propos</a></li>
   </ul>
 </nav>
 <section class="hero-section">
