--- a/listing.html
+++ b/listing.html
@@ -31,10 +31,10 @@
 <nav class="main-nav">
   <a href="index.html" class="logo">SephyLeaks</a>
   <ul class="nav-links">
-    <li><a href="#">Accueil</a></li>
-    <li><a href="#">Guides</a></li>
-    <li><a href="#">Ressources</a></li>
-    <li><a href="#">❓ À propos</a></li>
+    <li><a href="/SephyLeaks/index.html">Accueil</a></li>
+    <li><a href="/SephyLeaks/listing.html">Articles</a></li>
+	<li><a href="#">Ressources</a></li>
+    <li><a href="/SephyLeaks/pages/about.html">À propos</a></li>
   </ul>
 </nav>
 
