--- a/account/register.html
+++ b/account/register.html
@@ -20,19 +20,19 @@
 <body>
   <div class="register-wrapper">
     <h1>Créer un compte</h1>
-    <form id="register-form">
-      <label for="username">Pseudonyme :</label>
-      <input type="text" id="username" required />
+	<form id="register-form">
+	  <label for="username">Pseudonyme :</label>
+	  <input type="text" id="username" name="username" required />
 
-      <label for="email">Adresse e-mail :</label>
-      <input type="email" id="email" required />
+	  <label for="email">Adresse e-mail :</label>
+	  <input type="email" id="email" name="email" required />
 
-      <label for="password">Mot de passe :</label>
-      <input type="password" id="password" required />
+	  <label for="password">Mot de passe :</label>
+	  <input type="password" id="password" name="password" required />
 
-      <button type="submit">Créer mon compte</button>
-      <p id="register-error" class="error-message"></p>
-    </form>
+	  <button type="submit">Créer mon compte</button>
+	  <p id="register-error" class="error-message"></p>
+	</form>
 
     <p class="register-info">(Aucune base de données pour le moment. Stockage local uniquement.)</p>
 
